[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "env-test-ejones"
version = "0.0.1"
dependencies = [
    "torch~=2.0",
    "torchvision~=0.15.2",
    "albumentations~=0.4.3",
    "opencv-python~=4.9",
    "pudb~=2019.2",
    "imageio~=2.9",
    "imageio-ffmpeg~=0.4.2",
    "pytorch-lightning~=1.4",
    "omegaconf~=2.1",
    "test-tube~=0.7.5",
    "streamlit~=0.73.1",
    "einops~=0.3.0",
    "torch-fidelity~=0.3.0",
    "transformers~=4.36",
    "kornia~=0.6",
    "torchmetrics~=0.6.0",
    "diffusers~=0.21.4",
    "carvekit-colab~=4.1",
    "taming-transformers @ git+https://github.com/CompVis/taming-transformers.git",
    "clip @ git+https://github.com/openai/CLIP.git",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["zero123"]
